syntax = "proto3";

option csharp_namespace = "GrpcService1";

package dilek;

// The greeting service definition.
service Dilek {
  // Sends a greeting
  rpc HiDilek (DilekRequest) returns (DilekReply);
}

// The request message containing the user's name.
message DilekRequest {
  string name = 1;
}

// The response message containing the greetings.
message DilekReply {
  string message = 1;
}